<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CricPlay</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcome">Welcome To CricPlay</string>
    <string name="title_activity_graph">Graphs</string>
    <string name="t1graph">First Tournament</string>
    <string name="t2graph">Second Tournament</string>
    <string name="fullGraph">Championship Graph</string>
    <string name="action_settings">Settings</string>
    <string name="graph">Graphs</string>
    <string name="matches">Matches</string>
    <string name="myscore">My Score</string>
    <string name="allscore">All Score</string>
    <string name="teams">Teams</string>
    <string name="logout">logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
